--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,7 +18,8 @@
 		"express": "^4.19.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.3.4",
-		"multer": "^1.4.5-lts.1"
+		"multer": "^1.4.5-lts.1",
+		"vercel": "^32.3.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.0"
